--- a/web/src/app/component/enroll/enroll-applyment/step-form/step-form.component.less
+++ b/web/src/app/component/enroll/enroll-applyment/step-form/step-form.component.less
@@ -21,9 +21,10 @@
     margin-right: 0;
 
     .step__progress {
-      width: calc(100% + 2rem);
+      width: calc(100% - 2rem);
       position: absolute;
       top: 100%/3;
+      left: 2rem;
       z-index: -1;
 
       @media (min-width:700px) {
