--- a/web/src/app/app.component.less
+++ b/web/src/app/app.component.less
@@ -4,7 +4,7 @@
 .app-root {
   display: flex;
   flex-flow: column;
-  background: #fcffff;
+  background: var(--tui-base-02);
 };
 
 .header {
@@ -22,14 +22,16 @@
     padding-right: 2rem;
   };
 
-  color: var(--tui-text-01);
+
   background: var(--tui-base-02);
-  .shadow(1)
+  border-bottom: 1px solid var(--tui-base-03);
+  .shadow(6)
 };
 
 .navbar {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 };
 
 .surf-icon {
