--- a/web/src/app/component/enroll/enroll-applyment/enroll-applyment.component.html
+++ b/web/src/app/component/enroll/enroll-applyment/enroll-applyment.component.html
@@ -144,21 +144,43 @@
 						accept="application/pdf"
 						link="Прикрепите резюме"
 						label="или перетащите его сюда"
-						formControlName="cvControl"
+            (reject)="onInputFileReject($event)"
+            formControlName="cvControl"
 					></tui-input-files>
 					<tui-files>
-						<tui-file
-							*ngIf="candidateForm['experience'].controls['cvControl'].value"
-							[file]="candidateForm['experience'].controls['cvControl'].value"
-							[showDelete]="true"
-							(removed)="removeFile()"
-						></tui-file>
+            <tui-file
+              *ngIf="loadingFiles$ | async as file"
+              state="loading"
+              [file]="file"
+              [showDelete]="false"
+            ></tui-file>
+            <tui-file
+              *ngIf="rejectedFiles$ | async as file"
+              state="error"
+              [file]="file"
+              [showDelete]="true"
+              (removed)="clearRejected()"
+            ></tui-file>
+            <tui-file
+              *ngIf="loadedFiles$ | async as file"
+              [file]="file"
+              [showDelete]="true"
+              (removed)="removeFile()"
+            ></tui-file>
 					</tui-files>
 					<tui-error
 						formControlName="cvControl"
 						[error]="[] | tuiFieldError | async"
 					></tui-error>
 				</p>
+        <p class="tui-island__paragraph enroll_buttons_row"
+           hidden
+        >
+          <tui-input-files
+            formControlName="cvUploadedControl"
+            [(ngModel)]="candidate.cv"
+          ></tui-input-files>
+        </p>
 				<p class="tui-island__paragraph enroll_buttons_row">
 					<button
 						tuiButton
