TASK-76 Add candidate filtering (#40)
Добавление поиск по ключевым словам для кандидатов определенной стажировки

--- a/web/src/app/component/enroll/enroll-applyment/enroll-applyment.component.html
+++ b/web/src/app/component/enroll/enroll-applyment/enroll-applyment.component.html
@@ -109,7 +109,7 @@
 	<app-step name="experience" title="Опыт">
 		<tui-island class="container">
 			<form [formGroup]="candidateForm['experience']">
-				<h3 class="tui-island__title">Напишите немного о вашем опыте</h3>
+				<h3 class="tui-island__title">Напишите немного о вашем опыте и стеке технологий</h3>
 				<p class="tui-island__paragraph">
 					<tui-text-area
 						formControlName="experienceControl"
