--- a/report/src/main/resources/templates/report.html
+++ b/report/src/main/resources/templates/report.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
           name="viewport">
-    <link th:href="@{/styles.css}" rel="stylesheet"/>
+    <link href="/styles.css" rel="stylesheet"/>
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
