TASK-88 Add project card integration (#59)
TASK-88 Add project card functionality

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -21,8 +21,8 @@
 			<router-outlet></router-outlet>
 		</div>
 		<footer class="footer">
-			<nav class="navbar">
-				<h3>© 2023 Surf.</h3>
+			<nav class="footer-navbar">
+        <h3><a class = "dateDefinition" href="https://surf.ru/">© 2023 Surf</a></h3>
 			</nav>
 		</footer>
 	</div>
