--- a/web/src/app/app.component.less
+++ b/web/src/app/app.component.less
@@ -44,6 +44,12 @@
 };
 
 .footer {
+  background-color: var(--tui-base-09);
   display: flex;
   justify-content: center;
+}
+
+.dateDefinition{
+  color: var(--tui-base-02);
+  text-decoration: none;
 }
